Récuperation des logs par log_id et user_id + Fonctionnalité domaines & sous-domaines
